--- a/Company/index.html
+++ b/Company/index.html
@@ -9,14 +9,34 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="css/animate.min.css">
   <style>
-    nav {
-      opacity: 0.7;
+    nav a {
+      color: white !important;
+    }
+
+    .carousel-inner img {
+      width: 100%;
+      height: 700px !important;
+    }
+
+    .carousel-caption {
+      bottom: 300px;
+      font-size: 18px;
+    }
+
+    .carousel-caption h3 {
+      font-size: 40px;
+    }
+
+    .container hi,
+    .container-fluid h1 {
+      padding-top: 100px;
     }
 
     .navbar-default {
-      background-color: #8f8f8f;
-      border-color: #e7e7e7;
+      background-color: #38BBFD;
+      border-color: white;
     }
 
     #myCarousel,
@@ -37,6 +57,20 @@
     .container h1,
     .container-fluid h1 {
       padding-top: 50px;
+    }
+
+    a.navbar-brand {
+      padding-top: 8px;
+    }
+
+    .nav-tabs>li>a {
+      margin-left: 80px;
+      margin-bottom: 30px;
+      margin-top: 30px;
+      border-radius: 50px;
+      font-size: 15px;
+      background-color: #bbbbbb;
+      color: white;
     }
   </style>
   <script>
@@ -79,8 +113,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#mypage"><img src="img/topimg.png" alt="로고" width="315px"
-            style="padding-left: 35px; padding-top: 10px;"></a>
+        <a class="navbar-brand" href="#mypage"><img src="img/topimg.png" alt="로고" width="200px"></a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
@@ -108,24 +141,37 @@
       <div class="item active">
         <img src="img/pic1.jpg" alt="New York">
         <div class="carousel-caption">
-          <h3>New York</h3>
-          <p>The atmosphere in New York is lorem ipsum.</p>
+          <h3 class="animate__animated animate__fadeInLeft">직업능력개발 <strong
+              style="font-size: 60px; color:rgb(242, 242, 84);">우수 훈련
+              기관</strong>
+            선정!
+          </h3>
+          <ul>직업훈련의 품질을 높이고 일자리 창출에</ul>
+          <ul>앞정서는 교육기관이 되겠습니다.</ul>
         </div>
       </div>
 
       <div class="item">
         <img src="img/pic2.jpg" alt="Chicago">
         <div class="carousel-caption">
-          <h3>Chicago</h3>
-          <p>Thank you, Chicago - A night we won't forget.</p>
+          <h3 class="animate__animated animate__fadeInLeft">이수자 평가 <strong
+              style="font-size: 60px; color:rgb(242, 242, 84);">A등급</strong> 획득!
+          </h3>
+          <ul>직업능력개발훈련</ul>
+          <ul>이수자 평가에서 최우수 A등급을 획득하였습니다.</ul>
         </div>
-      </div>
+      </div>s
 
       <div class="item">
         <img src="img/pic3.jpg" alt="Los Angeles">
         <div class="carousel-caption">
-          <h3>LA</h3>
-          <p>Even though the traffic was a mess, we had the best time.</p>
+          <h3 class="animate__animated animate__fadeInLeft">
+            <ul style="padding-right: 50px;">4차 산업혁명을 선도하는</ul> IT 신기술 <strong
+              style="font-size: 60px; color:rgb(242, 242, 84);">교육의
+              메카</strong>
+          </h3>
+          <ul>최신 IT기술 트렌드를 접목한 실무 중심의 교육으로</ul>
+          <ul>대한민국 4차혁명 시대의 미래를 열어 가겠습니다.</ul>
         </div>
       </div>
     </div>
@@ -291,18 +337,20 @@
     // marker.setMap(null);    
     </script>
   </div>
+
   <!-- 오시는 길 -->
 
   <!-- footer ---------------------------------------------------------------------------------------------->
   <footer class="container-fluid" style="background-color: #252424">
-    <div class="container" style="color: #bbbbbb; padding-top: 50px !important; padding-bottom:50px !important;">
+    <div class="container" style="color: #bbbbbb; padding-top: 20px !important; padding-bottom:20px !important;">
       <div>㈜티아이에스정보시스템 / 티아이에스정보기술교육센터 / 대표이사 : 김휘준
-        <p>사업자등록번호 : 113-86-70392 / 통신판매업신고 : 제2015-서울영등포-0490호</p>
-        <p>수강&입학문의 : 02-2069-1931 / 업무문의 : 02-2069-1930 / 팩스 : 02-2069-1932 / 개인정보책임자 : 이형석</p>
+        <p>사업자등록번호 : 113-86-70392 / 통신판매업신고 : 제2015-서울영등포-0490호<br>수강&입학문의 : 02-2069-1931 / 업무문의 : 02-2069-1930 / 팩스 :
+          02-2069-1932 / 개인정보책임자 : 이형석</p>
       </div>
       <div>(우: 70255) 서울특별시 영등포구 선유로 130 (지번 : 양평동 3가 5-4번지), 에이스하이테크시티3차 2층(교무실 : 212호, 강의실 : 202호, 210호, 211호)</div>
-
       <div>COPYRIGHT © 2013 TIS Information Technology Education Center. All RIGHTS RESERVED.</div>
+      <img src="img/bottomimg.png" style="padding-left: 1200px; margin-top: -160px;">
+
     </div>
     </div>
   </footer>
