--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@ http://www.templatemo.com/tm-498-stimulus
           <div class="skill-thumb">
             <div class="wow fadeInUp section-title color-white" data-wow-delay="1.2s">
               <h1>Skill</h1>
-              <p class="color-white" style="font-size: 20px;">Java</p>
-              <p class="color-white" style="font-size: 20px;">HTML : 5</p>
-              <p class="color-white" style="font-size: 20px;">CSS</p>
+              <p class="color-white" style="font-size: 17px;">* Java</p>
+              <p class="color-white" style="font-size: 17px;">* HTML : 5</p>
+              <p class="color-white" style="font-size: 17px;">* CSS</p>
             </div>
           </div>
         </div>
