--- a/index.html
+++ b/index.html
@@ -230,7 +230,10 @@ http://www.templatemo.com/tm-498-stimulus
             </div>
 
             <div id="contact-form">
-
+              <a href="https://ehsrktm.github.io/portfolio/Company/" target="_blank">
+                <img src="images/pic01.jpg" width="250px" height="200px">
+                <p style="color: white; padding-left: 50px;">학원 홈페이지 제작</p>
+              </a>
             </div>
 
 
