--- a/index.html
+++ b/index.html
@@ -250,13 +250,14 @@ http://www.templatemo.com/tm-498-stimulus
                   <div class="modal-content">
                     <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      <h4 class="modal-title">Java 학사관리프로그램</h4>
+                      <h4 class="modal-title" style="color: black; font-size: 14px;">Java 학사관리프로그램</h4>
                     </div>
-                    <div class="modal-body">
+                    <div class="modal-body" style="width: 800px; height: 600px;">
                       <figure class="vid">
                         <iframe
                           src="https://www.youtube.com/embed/ySxih0-Ed2A?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&playlist=ySxih0-Ed2A&mute=1"
-                          frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+                          frameborder="0" allowfullscreen="allowfullscreen"
+                          style="width: 570px; height: 570px;"></iframe>
                       </figure>
                     </div>
                     <div class="modal-footer">
