--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@ http://www.templatemo.com/tm-498-stimulus
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#home" class="smoothScroll">Home</a></li>
-          <li><a href="#about" class="smoothScroll">Skill</a></li>
-          <li><a href="#experience" class="smoothScroll">Experiences</a></li>
-          <li><a href="#contact" class="smoothScroll">Contact</a></li>
+          <li><a href="#about" class="smoothScroll">Skill & Experiences</a></li>
+          <li><a href="#contact" class="smoothScroll">Portfolio & Contact</a></li>
         </ul>
       </div>
 
@@ -77,7 +76,10 @@ http://www.templatemo.com/tm-498-stimulus
           <div class="home-thumb">
             <div class="section-title">
               <h4 class="wow fadeInUp" data-wow-delay="0.3s">welcome to my website</h4>
-              <h1 class="wow fadeInUp" data-wow-delay="0.6s">안녕하세요 <strong>열정있는 개발자가 되고싶은</strong><br>저는 이영훈 입니다.</h1>
+              <h1 class="wow fadeInUp" data-wow-delay="0.6s">안녕하세요 <strong style="font-size: 18px;">포기하지 않고 열정있는 개발자가
+                  되고싶은</strong>
+                <div style="margin-top: 3%;">이영훈 입니다.</div>
+              </h1>
               <p class="wow fadeInUp" data-wow-delay="0.9s">부족하지만 꾸준하게 성장해가는 개발자가 목표입니다.</p>
 
               <a href="#about" class="wow fadeInUp smoothScroll section-btn btn btn-success" data-wow-delay="1.4s">Get
@@ -102,11 +104,11 @@ http://www.templatemo.com/tm-498-stimulus
         <div class="col-md-6 col-sm-12">
           <div class="about-thumb">
             <div class="wow fadeInUp section-title" data-wow-delay="0.4s">
-              <h1>세상에 첫발을 내딘 개발자</h1>
+              <h1>새로운 도전을 시작하는 개발자</h1>
               <p class="color-yellow">모든것이 호기심에 가득차다</p>
             </div>
             <div class="wow fadeInUp" data-wow-delay="0.8s">
-              <p>눈으로 아직 보고 못 배운 것들이 많습니다 그리고 호기심과 포기하지 않는 끈기가 있다면 저는 더욱 성장할 수 있는 가능성이 많다고 생각합니다.</p>
+              <p>새로운 시작을 하기 위해 배움을 게을리하지 않습니다. 흰색 도화지 위에 배움이라는 것을 채우고자 합니다.</p>
 
             </div>
           </div>
@@ -119,10 +121,16 @@ http://www.templatemo.com/tm-498-stimulus
         <div class="bg-yellow col-md-3 col-sm-6">
           <div class="skill-thumb">
             <div class="wow fadeInUp section-title color-white" data-wow-delay="1.2s">
-              <h1>Skill</h1>
-              <p class="color-white" style="font-size: 17px;">* Java</p>
-              <p class="color-white" style="font-size: 17px;">* HTML : 5</p>
-              <p class="color-white" style="font-size: 17px;">* CSS</p>
+              <h1 style="color: black;">Skill</h1>
+              <span class="color-white" style="font-size: 17px; margin-right: 3%;"><img
+                  src="images/java.png">Java</span><span class="color-white"
+                style="font-size: 17px; margin-right: 3%;"><img src="images/mariadb.png">MariaDB</span><span
+                class="color-white" style="font-size: 17px;"><img src="images/springboot.png">Spring Boot</span>
+              <p class="color-white" style="font-size: 17px;"><img src="images/html.png">HTML:5</p>
+              <p class="color-white" style="font-size: 17px;"><img src="images/css.png">CSS</p>
+              <p class="color-white" style="font-size: 17px;"><img src="images/bootstrap.png">Bootstrap</p>
+              <p class="color-white" style="font-size: 17px;"><img src="images/java-script-logo.png">Java Script</p>
+              <p class="color-white" style="font-size: 17px;"><img src="images/jquery-32.png">jQuery</p>
             </div>
           </div>
         </div>
@@ -131,7 +139,7 @@ http://www.templatemo.com/tm-498-stimulus
     </div>
   </section>
 
-  <section id="experience" class="parallax-section">
+  <!-- <section id="experience" class="parallax-section">
     <div class="container">
       <div class="row">
 
@@ -171,7 +179,7 @@ http://www.templatemo.com/tm-498-stimulus
 
       </div>
     </div>
-  </section>
+  </section> -->
 
 
   <!-- Education Section -->
@@ -229,26 +237,12 @@ http://www.templatemo.com/tm-498-stimulus
               <h1 class="color-white">Portfolio</h1>
             </div>
 
-            <div id="contact-form">
-              <a href="https://ehsrktm.github.io/portfolio/Company/" target="_blank">
-                <img src="images/pic01.jpg" width="250px" height="200px">
-                <p style="color: white; padding-left: 50px; padding-bottom: 50px;">학원 홈페이지 제작</p>
-              </a>
-            </div>
-
-            <div id="contact-form">
-              <a href="https://ehsrktm.github.io/portfolio/Rahpa/" target="_blank">
-                <img src="images/pic02.jpg" width="250px" height="200px">
-                <p style="color: white; padding-left: 50px; padding-bottom: 50px;">브랜드 홍보페이지 제작</p>
-              </a>
-            </div>
-
             <div class="container">
               <!-- Trigger the modal with a button -->
               <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"
                 style="background-color: #E3AE57;">Youtube
                 Link</button>
-              <p style="color: white;">Java학사관리프로그램</p>
+              <p style="color: white; margin-bottom: 5%;">팀 프로젝트(TriPlan)</p>
               <!-- Modal -->
               <div class="modal fade" id="myModal" role="dialog">
                 <div class="modal-dialog">
@@ -257,12 +251,12 @@ http://www.templatemo.com/tm-498-stimulus
                   <div class="modal-content">
                     <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      <h4 class="modal-title" style="color: black; font-size: 14px;">Java 학사관리프로그램</h4>
+                      <h4 class="modal-title" style="color: black; font-size: 14px;">팀 프로젝트(TriPlan)</h4>
                     </div>
                     <div class="modal-body" style="width: 800px; height: 600px;">
                       <figure class="vid">
                         <iframe
-                          src="https://www.youtube.com/embed/ySxih0-Ed2A?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&playlist=ySxih0-Ed2A&mute=1"
+                          src="https://www.youtube.com/embed/ydF21Nnpn8c?autoplay=1&mute=1&loop=1&showinfo=0&controls=0"
                           frameborder="0" allowfullscreen="allowfullscreen"
                           style="width: 570px; height: 570px;"></iframe>
                       </figure>
@@ -275,6 +269,19 @@ http://www.templatemo.com/tm-498-stimulus
                 </div>
               </div>
 
+            </div>
+
+            <div id="contact-form" style="float:left;">
+              <a href="https://ehsrktm.github.io/portfolio/Rahpa/" target="_blank">
+                <img src="images/pic02.jpg" width="250px" height="200px" style="margin-right: 30px;">
+                <p style="color: white; padding-left: 50px; padding-bottom: 50px;">브랜드 홍보페이지 제작</p>
+            </div>
+
+            <div id="contact-form">
+              <a href="https://ehsrktm.github.io/portfolio/Company/" target="_blank">
+                <img src="images/pic01.jpg" width="250px" height="200px">
+                <p style="color: white; padding-left: 335px; padding-bottom: 50px;">학원 홈페이지 제작</p>
+              </a>
             </div>
 
           </div>
