--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@ http://www.templatemo.com/tm-498-stimulus
             <div class="container">
               <!-- Trigger the modal with a button -->
               <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"
-                style="background-color: #E3AE57;">Youtube
-                Link</button>
-              <p style="color: white; margin-bottom: 5%;">팀 프로젝트(TriPlan)</p>
+                style="background-color: #E9724C; border: none; margin-left: -1.8%;"><img src="images/team.jpg"
+                  width="250px" height="200px"></button>
+              <p style="color: white; margin-bottom: 5%; padding-left: 50px;">팀 프로젝트(TriPlan)</p>
               <!-- Modal -->
               <div class="modal fade" id="myModal" role="dialog">
                 <div class="modal-dialog">
