--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@ http://www.templatemo.com/tm-498-stimulus
               <span class="color-white" style="font-size: 17px; margin-right: 3%;"><img
                   src="images/java.png">Java</span><span class="color-white"
                 style="font-size: 17px; margin-right: 3%;"><img src="images/mariadb.png">MariaDB</span><span
-                class="color-white" style="font-size: 17px;"><img src="images/springboot.png">Spring Boot</span>
+                class="color-white" style="font-size: 17px;"><img src="images/springboot.png">Spring Boot & JPA</span>
+              <p class="color-white" style="font-size: 17px;"><img src="images/thymeleaf.png">Thymeleaf</p>
               <p class="color-white" style="font-size: 17px;"><img src="images/html.png">HTML:5</p>
               <p class="color-white" style="font-size: 17px;"><img src="images/css.png">CSS</p>
               <p class="color-white" style="font-size: 17px;"><img src="images/bootstrap.png">Bootstrap</p>
@@ -241,8 +242,8 @@ http://www.templatemo.com/tm-498-stimulus
               <!-- Trigger the modal with a button -->
               <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"
                 style="background-color: #E9724C; border: none; margin-left: -1.8%;"><img src="images/team.jpg"
-                  width="250px" height="200px"></button>
-              <p style="color: white; margin-bottom: 5%; padding-left: 50px;">팀 프로젝트(TriPlan)</p>
+                  width="250px" height="200px" style="margin-bottom: -4%;"></button>
+              <h4 style="color: white; margin-bottom: 5%; padding-left: 50px;">팀 프로젝트(TriPlan)</h4>
               <!-- Modal -->
               <div class="modal fade" id="myModal" role="dialog">
                 <div class="modal-dialog">
@@ -251,9 +252,12 @@ http://www.templatemo.com/tm-498-stimulus
                   <div class="modal-content">
                     <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      <h4 class="modal-title" style="color: black; font-size: 14px;">팀 프로젝트(TriPlan)</h4>
+                      <h4 class="modal-title" style="color: black; font-size: 14px;">팀 프로젝트
+                        <div>[TriPlan] 여행 일정 공유 사이트</div>
+                        <div style="margin-top: 2%;">PM직 수행, 통합관리담당</div>
+                      </h4>
                     </div>
-                    <div class="modal-body" style="width: 800px; height: 600px;">
+                    <div class="modal-body" style="width: 100%; height: 600px;">
                       <figure class="vid">
                         <iframe
                           src="https://www.youtube.com/embed/ydF21Nnpn8c?autoplay=1&mute=1&loop=1&showinfo=0&controls=0"
@@ -274,13 +278,13 @@ http://www.templatemo.com/tm-498-stimulus
             <div id="contact-form" style="float:left;">
               <a href="https://ehsrktm.github.io/portfolio/Rahpa/" target="_blank">
                 <img src="images/pic02.jpg" width="250px" height="200px" style="margin-right: 30px;">
-                <p style="color: white; padding-left: 50px; padding-bottom: 50px;">브랜드 홍보페이지 제작</p>
+                <h4 style="color: white; padding-left: 50px; padding-bottom: 50px;">브랜드 홍보페이지 제작</h4>
             </div>
 
             <div id="contact-form">
               <a href="https://ehsrktm.github.io/portfolio/Company/" target="_blank">
                 <img src="images/pic01.jpg" width="250px" height="200px">
-                <p style="color: white; padding-left: 335px; padding-bottom: 50px;">학원 홈페이지 제작</p>
+                <h4 style="color: white; padding-left: 335px; padding-bottom: 50px;">학원 홈페이지 제작</h4>
               </a>
             </div>
 
